--- a/html/aula02/index.html
+++ b/html/aula02/index.html
@@ -15,12 +15,14 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/rafaballerini" target="_blank">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails" target="_blank">Github</a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__link" href="https://github.com/guilhermeonrails" target="_blank"><img src="assets/github.png" alt="Icone do Github"> Github</a>
+                <a class="apresentacao__links__link" href="https://likedin.com/in/rafaelaballerini" target="_blank"><img src="assets/linkedin.png" alt="Icone do Linkedin"> Linkedin</a>
+                <a class="apresentacao__links__link" href="https://twitch.tv/guilimadev" target="_blank"><img src="assets/twitch.png" alt="Icone da Twitch"> Twitch</a>
             </div>
         </section>
 
-        <img src="imagens/Imagem.png" alt="Foto da Joana Santos programando">
+        <img src="assets/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer>
         
