--- a/html/aula02/index.html
+++ b/html/aula02/index.html
@@ -7,8 +7,11 @@
     <title>Portifolio</title>
 </head>
 <body>
-    <header>
-
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a href="" class="cabecalho__menu__link">Home</a>
+            <a href="" class="cabecalho__menu__link">Sobre mim</a>
+        </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
@@ -24,8 +27,8 @@
 
         <img src="assets/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
-    <footer>
-        
+    <footer class="rodape">
+        <p>Desenvolvido por Lucas Vinicius.</p>
     </footer>
 </body>
 </html>
