--- a/html/aula02/about.html
+++ b/html/aula02/about.html
@@ -19,7 +19,7 @@
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sint ipsa enim voluptas qui, sunt nemo dolor neque repellat nihil voluptate excepturi aperiam recusandae praesentium, ad tenetur exercitationem harum dolores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatibus animi quam veritatis quia, itaque iste quod unde a, totam quisquam optio fugiat pariatur facilis atque similique, ducimus accusantium aperiam?</p>
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim perferendis aspernatur at autem praesentium illo similique quasi earum sed mollitia maiores odit pariatur fugit dignissimos porro quos, impedit quis? Cum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, debitis magnam dignissimos, quas delectus quia officiis numquam blanditiis consequuntur hic nostrum suscipit assumenda illo commodi et eius! Reprehenderit, totam voluptates? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero perspiciatis dicta ullam accusantium fugit! Atque suscipit magni repellendus debitis nulla, vel quae ipsa reprehenderit eius maiores hic, voluptates odit quis.</p>
         </section>
-        <img src="assets/Imagem.png" alt="Foto da Joana Santos programando">
+        <img src="assets/Imagem.png" alt="Foto da Joana Santos programando" class="apresentacao__imagem">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Lucas Vinicius.</p>
